refactor(gui-chat): rebuild gui-chat package
- Update styles and layout
- Integrate Font Awesome icons
- Refactor dialog types and structure
- Update project dependencies

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "package": "pnpm run -F light-at package"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "himeditator",
+  "license": "MIT",
   "packageManager": "pnpm@10.7.0"
 }
