--- a/packages/gui-chat/package.json
+++ b/packages/gui-chat/package.json
@@ -11,19 +11,24 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vscode-elements/elements": "^1.14.0",
+    "autosize": "^6.0.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/autosize": "^4.0.3",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^7.0.2",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
-    "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
   }
 }
