--- a/packages/gui-chat/package.json
+++ b/packages/gui-chat/package.json
@@ -16,6 +16,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vscode-elements/elements": "^1.14.0",
     "autosize": "^6.0.1",
+    "highlight.js": "^11.11.1",
+    "katex": "^0.16.21",
+    "marked": "^15.0.7",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
