--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -181,6 +181,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "ollama": "^0.5.14",
+    "openai": "^4.91.1"
   }
 }
