--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,8 @@
 	// for the documentation about the extensions.json format
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
-		"ms-vscode.extension-test-runner"
+		"amodio.tsl-problem-matcher",
+		"ms-vscode.extension-test-runner",
+		"Vue.volar"
 	]
 }
