--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "pnpm run -F gui-chat build",
     "watch": "pnpm run -F light-at watch",
     "both": "pnpm run build && pnpm run watch",
-    "package": "pnpm run -F light-at package"
+    "package": "pnpm run -F light-at vsce:package"
   },
   "keywords": [],
   "author": "himeditator",
