--- a/packages/gui-chat/package.json
+++ b/packages/gui-chat/package.json
@@ -20,7 +20,8 @@
     "katex": "^0.16.21",
     "marked": "^15.0.7",
     "pinia": "^3.0.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.1.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
