docs(README): update readme and feature descriptions
- Add detailed feature descriptions in multiple languages
- Update welcome message with links to user manual and GitHub page
- Update package.json version and description

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -2,9 +2,9 @@
   "name": "light-at",
   "displayName": "Light At",
   "publisher": "himeditator",
-  "icon": "assets/media/light-at.png",
-  "description": "Light At is an open-source chat assistant for VS Code.",
-  "version": "0.0.1",
+  "icon": "assets/icons/light-at.png",
+  "description": "Light At is an open-source chat assistant for VS Code, emphasizing the experience of chatting with LLMs within the IDE.",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/HiMeditator/light-at"
@@ -44,7 +44,7 @@
         {
           "id": "light-at",
           "title": "%plugin.name%",
-          "icon": "assets/media/light-at-sidebar.png"
+          "icon": "assets/icons/light-at-sidebar.png"
         }
       ]
     },
@@ -54,7 +54,7 @@
           "type": "webview",
           "id": "light-at.chat",
           "name": "%plugin.name%",
-          "icon": "assets/media/light-at-sidebar.png"
+          "icon": "assets/icons/light-at-sidebar.png"
         }
       ]
     },
