--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "pnpm run -F gui-chat dev",
     "build": "pnpm run -F gui-chat build",
-    "watch": "pnpm run -F light-at watch",
-    "package": "pnpm run -F light-at vsce:package"
+    "watch": "pnpm run -F virtualme2 watch",
+    "package": "pnpm run -F virtualme2 vsce:package"
   },
   "keywords": [],
   "author": "himeditator",
