--- a/packages/gui-control/package.json
+++ b/packages/gui-control/package.json
@@ -11,6 +11,10 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vscode-elements/elements": "^1.15.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
   },
