--- a/packages/gui-control/package.json
+++ b/packages/gui-control/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vscode-elements/elements": "^1.15.0",
     "pinia": "^3.0.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.1.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
