feat(plugin): 更新和删除内容
- 删除多余内容
- 更新部分文字描述

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -35,7 +35,9 @@
     "chat",
     "LLM"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./out/extension/extension.js",
   "l10n": "./l10n",
   "contributes": {
